examples/test/testpolicy5921.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5921
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key30: value11
      key8: value37
      key43: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value6
      podSelector:
        matchLabels:
          key6: value2
          key18: value43
